--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,24 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "30.0.1"
 
     defaultConfig {
         applicationId "com.kimhh.dongjulunch"
-        minSdkVersion 16
+        minSdkVersion 26
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.0"
+        versionCode 5
+        versionName "3.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "11"
     }
 
     buildTypes {
